[workspace]
members = [
    "tsdb-core",
    "compression",
    "storage", 
    "query",
    "replication",
    "shard-manager",
    "tools"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
dashmap = "5.4"
ahash = "0.8"
byteorder = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.5"

[package]
name = "gorilla-tsdb"
version = "0.1.0"
edition = "2021"

[dependencies]
tsdb-core = { path = "tsdb-core" }
compression = { path = "compression" }
storage = { path = "storage" }
query = { path = "query" }
replication = { path = "replication" }
shard-manager = { path = "shard-manager" }
tools = { path = "tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "tsdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "tsdb-client"
path = "src/bin/client.rs"