[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tsdb-core = { path = "../tsdb-core" }
compression = { path = "../compression" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }