[package]
name = "tsdb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }